[package]
name = "bridgetoken"
version = "0.0.1"
authors = ["Junius Zhou <junius.zhou@gmail.com>"]
edition = "2021"
description = "fungible token"
license = "Apache-2.0"
repository = "https://github.com/juniuszhou/cw-bridgebank"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { github = "https://github.com/CosmWasm/cw-plus", version = "0.12.0" }
cw2 = { github = "https://github.com/CosmWasm/cw-plus", version = "0.12.0" }
cw20 = { github = "https://github.com/CosmWasm/cw-plus", version = "0.12.0" }
cw-storage-plus = { github = "https://github.com/CosmWasm/cw-plus", version = "0.12.0" }
cosmwasm-std = { version = "1.0.0-beta3" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }
